<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/next"
        android:title="@string/next_sol"
        android:icon="@drawable/ic_next_24"
        app:showAsAction="ifRoom"/>
</menu>